# Trieste

samples/infinite/: CMakeLists.txt  main.cpp
